# Change Log
The format is based on [Keep a Changelog](http://keepachangelog.com/)

## [Unreleased]

## [v0.1.2] - Thu, 22 Feb 2018 13:09:36 +0900

### Fixed
- 택배발송일을 변경요청하는 parameter 를 수정함

## [v0.1.1] - Mon, 19 Feb 2018 15:55:01 +0900

### Changed
- 취업날개 쿠폰이 `seoul-2017-2` 에서 `seoul-2018-1` 로 변경됨

## [v0.1.0] - Thu, 02 Nov 2017 15:00:08 +0900

### Added
- Dockerfile

## [v0.0.5] - Tue, 01 Aug 2017 15:16:32 +0900
### Changed
- 온라인 주문서는 상태를 변경할때에 배송희망일도 변경

## [v0.0.4] - Tue, 13 Jun 2017 16:32:30 +0900
### Changed
- 취업날개 온라인 대여자의 상태를 반영시켜줌

## [v0.0.3] - Mon, 12 Jun 2017 13:55:57 +0900
### Changed
- freedress.net account is not required

## [v0.0.2] - Mon, 05 Jun 2017 15:51:36 +0900
### Changed
- 스스로 의존성을 갖는 문제 해결

## [v0.0.1] - Mon, 05 Jun 2017 15:43:07 +0900
### Added
- 취업날개 예약중 상태를 대여완료로 변경하는 cronjob 추가