@@ -1,5 +1,7 @@
 # OpenCloset-Cron-Event #
 
+[![Build Status](https://travis-ci.org/opencloset/OpenCloset-Cron-Event.svg?branch=v0.1.2)](https://travis-ci.org/opencloset/OpenCloset-Cron-Event)
+
 이벤트와 관련된 예약작업
 
 - 취업날개 예약상태를 변경 (예약중 -> 대여완료 AM 01:05)
