@@ -3,6 +3,9 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/)
 
 ## [Unreleased]
 
+### Added
+- travis-ci 에서 docker image 를 build
+
 ## [v0.1.2] - Thu, 22 Feb 2018 13:09:36 +0900
 
 ### Fixed
